Add Main endpoint:
- Promotion listing
- Blog listing
- Blog info
